add swgger post query params
