# UserService/docs/swagger.json
@@ -4,38 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/example/Get/{id}": {
-            "get": {
-                "description": "description of function that get user by id",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "example"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Some ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/example/GetAll": {
+        "/user-service/GetAll": {
             "get": {
                 "description": "description of function that get all users from DB",
                 "consumes": [
@@ -45,7 +14,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "user-service"
                 ],
                 "summary": "GetAll",
                 "responses": {
@@ -58,7 +27,40 @@
                 }
             }
         },
-        "/example/test-api": {
+        "/user-service/WalletReplenishment": {
+            "post": {
+                "description": "add money",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user-service"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Some ID",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Some money",
+                        "name": "money",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user-service/test": {
             "get": {
                 "description": "do ping",
                 "consumes": [
@@ -68,9 +70,40 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "user-service"
                 ],
                 "summary": "ping example",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user-service/{id}": {
+            "get": {
+                "description": "description of function that get user by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user-service"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Some ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
